# Agentic_OS

./: LICENSE  README.md
assistant_ws_v2/: run_ass_robot.sh
assistant_ws_v2/src/assistant_robot/: package.xml  setup.cfg  setup.py
assistant_ws_v2/src/assistant_robot/assistant_robot/: main.py  requirments.txt
assistant_ws_v2/src/assistant_robot/assistant_robot/common/: confirm_utils.py  utils.py
assistant_ws_v2/src/assistant_robot/assistant_robot/common/gpt_client/: base_client.py  factory.py  model_loader.py  openai_client.py  prompt_manager.py  qwen_client.py
assistant_ws_v2/src/assistant_robot/assistant_robot/execution/: fake_vla_node.py  fake_vln_node.py
assistant_ws_v2/src/assistant_robot/assistant_robot/interaction/: speech_manager.py
assistant_ws_v2/src/assistant_robot/assistant_robot/interaction/ASR/: funasr_transcriber.py  transcriber_interface.py
assistant_ws_v2/src/assistant_robot/assistant_robot/interaction/Dialogue/: dialogue_manager.py  llm_clarify.py  llm_intent_router.py  llm_qa.py
assistant_ws_v2/src/assistant_robot/assistant_robot/memory/: ros_interface.py
assistant_ws_v2/src/assistant_robot/assistant_robot/planner/: plans_manager.py
assistant_ws_v2/src/assistant_robot/config/: config.ini  gpt_config.yaml  intent_config.yaml
assistant_ws_v2/src/assistant_robot/config/keys/: openai_key.txt  qwen_key.txt
assistant_ws_v2/src/assistant_robot/config/prompts/: clarification_prompt copy.yaml  clarifier_prompt.j2  clarifier_prompt_QWen.yaml  intent_prompt.j2  planner_prompt_QWen.yaml  qa_prompt.j2  qa_prompt_QWen.yaml
(+52 files in other folders)
